syntax = "proto3";

package drbd.agent.v1;

option go_package = "github.com/liliang-cn/drbd-agent/api/proto/v1;pb";

// ============================================================================
// LVM (Logical Volume Manager) Service
// Manages Physical Volumes, Volume Groups, and Logical Volumes
// ============================================================================

service LVM {
  // =================================================================
  // Physical Volume (PV) operations
  // =================================================================

  // PVCreate - Create a physical volume for use by LVM
  rpc PVCreate(PVCreateRequest) returns (PVCreateResponse);

  // PVRemove - Remove a physical volume
  rpc PVRemove(PVRemoveRequest) returns (PVRemoveResponse);

  // PVDisplay - Display detailed information about a physical volume
  rpc PVDisplay(PVDisplayRequest) returns (PVDisplayResponse);

  // PVS - List all physical volumes
  rpc PVS(PVSRequest) returns (PVSResponse);

  // PVScan - Scan all disks for physical volumes
  rpc PVScan(PVScanRequest) returns (PVScanResponse);

  // =================================================================
  // Volume Group (VG) operations
  // =================================================================

  // VGCreate - Create a volume group
  rpc VGCreate(VGCreateRequest) returns (VGCreateResponse);

  // VGRemove - Remove a volume group
  rpc VGRemove(VGRemoveRequest) returns (VGRemoveResponse);

  // VGDisplay - Display detailed information about a volume group
  rpc VGDisplay(VGDisplayRequest) returns (VGDisplayResponse);

  // VGS - List all volume groups
  rpc VGS(VGSRequest) returns (VGSResponse);

  // VGScan - Scan all disks for volume groups
  rpc VGScan(VGScanRequest) returns (VGScanResponse);

  // VGExtend - Add physical volumes to a volume group
  rpc VGExtend(VGExtendRequest) returns (VGExtendResponse);

  // VGReduce - Remove physical volumes from a volume group
  rpc VGReduce(VGReduceRequest) returns (VGReduceResponse);

  // =================================================================
  // Logical Volume (LV) operations
  // =================================================================

  // LVCreate - Create a logical volume
  rpc LVCreate(LVCreateRequest) returns (LVCreateResponse);

  // LVRemove - Remove a logical volume
  rpc LVRemove(LVRemoveRequest) returns (LVRemoveResponse);

  // LVDisplay - Display detailed information about a logical volume
  rpc LVDisplay(LVDisplayRequest) returns (LVDisplayResponse);

  // LVS - List all logical volumes
  rpc LVS(LVSRequest) returns (LVSResponse);

  // LVScan - Scan all disks for logical volumes
  rpc LVScan(LVScanRequest) returns (LVScanResponse);

  // LVExtend - Extend a logical volume
  rpc LVExtend(LVExtendRequest) returns (LVExtendResponse);

  // LVReduce - Reduce a logical volume
  rpc LVReduce(LVReduceRequest) returns (LVReduceResponse);

  // =================================================================
  // Thin Provisioning operations
  // =================================================================

  // LVThinPoolCreate - Create a thin pool for thin volumes
  rpc LVThinPoolCreate(LVThinPoolCreateRequest) returns (LVThinPoolCreateResponse);

  // =================================================================
  // Snapshot operations
  // =================================================================

  // LVSnapshotCreate - Create a snapshot of a logical volume
  rpc LVSnapshotCreate(LVSnapshotCreateRequest) returns (LVSnapshotCreateResponse);

  // LVSnapshotRestore - Restore a logical volume from a snapshot
  rpc LVSnapshotRestore(LVSnapshotRestoreRequest) returns (LVSnapshotRestoreResponse);

  // LVSnapshotMerge - Merge a snapshot back into its origin
  rpc LVSnapshotMerge(LVSnapshotMergeRequest) returns (LVSnapshotMergeResponse);

  // LVListSnapshots - List all snapshots for a logical volume
  rpc LVListSnapshots(LVListSnapshotsRequest) returns (LVListSnapshotsResponse);
}

// ============================================================================
// Physical Volume (PV) Messages
// ============================================================================

message PVCreateRequest {
  string device = 1;              // Device path (e.g., "/dev/sdb")
  bool force = 2;                 // Force creation without confirmation
  repeated string options = 3;    // Additional options (e.g., "--dataalignment", "--metadatasize")
}

message PVCreateResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message PVRemoveRequest {
  string pv_name = 1;             // Physical volume device path
  bool force = 2;                 // Force removal
}

message PVRemoveResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message PVDisplayRequest {
  string pv_name = 1;             // Physical volume device path
  bool verbose = 2;               // Show detailed information
}

message PVDisplayResponse {
  bool success = 1;
  string message = 2;
  repeated PVInfo pvs = 3;
}

message PVSRequest {
  repeated string options = 1;    // Additional options (e.g., "--segments", "--units g")
}

message PVSResponse {
  bool success = 1;
  string message = 2;
  repeated PVInfo pvs = 3;
}

message PVScanRequest {
  bool cache = 1;                 // Update LVM cache
}

message PVScanResponse {
  bool success = 1;
  string message = 2;
  repeated PVInfo pvs = 3;
}

// ============================================================================
// Volume Group (VG) Messages
// ============================================================================

message VGCreateRequest {
  string vg_name = 1;                                     // Volume group name
  repeated string physical_volumes = 2;                   // Physical volumes to add
  repeated string options = 3;                            // Additional options
}

message VGCreateResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message VGRemoveRequest {
  string vg_name = 1;             // Volume group name
  bool force = 2;                 // Force removal
}

message VGRemoveResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message VGDisplayRequest {
  string vg_name = 1;             // Volume group name (empty for all VGs)
  bool verbose = 2;               // Show detailed information
  bool partial = 3;               // Partial display mode
}

message VGDisplayResponse {
  bool success = 1;
  string message = 2;
  repeated VGInfo vgs = 3;
}

message VGSRequest {
  repeated string options = 1;    // Additional options
}

message VGSResponse {
  bool success = 1;
  string message = 2;
  repeated VGInfo vgs = 3;
}

message VGScanRequest {
  bool cache = 1;                 // Update LVM cache
}

message VGScanResponse {
  bool success = 1;
  string message = 2;
  repeated VGInfo vgs = 3;
}

message VGExtendRequest {
  string vg_name = 1;                                     // Volume group name
  repeated string physical_volumes = 2;                   // Physical volumes to add
}

message VGExtendResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message VGReduceRequest {
  string vg_name = 1;                                     // Volume group name
  repeated string physical_volumes = 2;                   // Physical volumes to remove
  bool removemissing = 3;                                // Remove missing PVs
}

message VGReduceResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

// ============================================================================
// Logical Volume (LV) Messages
// ============================================================================

message LVCreateRequest {
  string vg_name = 1;                                     // Volume group name
  string lv_name = 2;                                     // Logical volume name
  string size_suffix = 3;                                 // Size with suffix (e.g., "10G", "512M")
  bool thin = 4;                                          // Create as thin volume (default: true)
  string thin_pool = 5;                                   // Thin pool name (if thin=true, required)
  repeated string options = 6;                            // Additional options
}

message LVCreateResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message LVRemoveRequest {
  string lv_path = 1;             // Logical volume path (e.g., "/dev/vg00/lv_swap")
  bool force = 2;                 // Force removal
}

message LVRemoveResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message LVDisplayRequest {
  string lv_path = 1;             // Logical volume path
  bool verbose = 2;               // Show detailed information
}

message LVDisplayResponse {
  bool success = 1;
  string message = 2;
  repeated LVInfo lvs = 3;
}

message LVSRequest {
  string vg_name = 1;             // Volume group name (optional, filter by VG)
  repeated string options = 2;    // Additional options
}

message LVSResponse {
  bool success = 1;
  string message = 2;
  repeated LVInfo lvs = 3;
}

message LVScanRequest {
  bool cache = 1;                 // Update LVM cache
}

message LVScanResponse {
  bool success = 1;
  string message = 2;
  repeated LVInfo lvs = 3;
}

message LVExtendRequest {
  string lv_path = 1;                                     // Logical volume path
  string size_suffix = 2;                                 // Size to add (e.g., "+10G")
  repeated string options = 3;                            // Additional options
}

message LVExtendResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message LVReduceRequest {
  string lv_path = 1;                                     // Logical volume path
  string size_suffix = 2;                                 // Size to reduce (e.g., "-5G")
  bool force = 3;                                         // Force reduction
  repeated string options = 4;                            // Additional options
}

message LVReduceResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

// ============================================================================
// LVM Data Types
// ============================================================================

message PVInfo {
  string pv_name = 1;             // Physical volume device path
  string vg_name = 2;             // Volume group name
  string pv_fmt = 3;              // Metadata format
  string attr = 4;                // Attributes
  uint64 pv_size = 5;             // Size of PV
  uint64 pv_free = 6;             // Free space in PV
}

message VGInfo {
  string vg_name = 1;             // Volume group name
  uint64 pv_count = 2;            // Number of PVs
  uint64 lv_count = 3;            // Number of LVs
  uint64 snap_count = 4;          // Number of snapshots
  string vg_attr = 5;             // Volume group attributes
  uint64 vg_size = 6;             // Total size
  uint64 vg_free = 7;             // Free space
}

message LVInfo {
  string lv_name = 1;             // Logical volume name
  string lv_path = 2;             // Full device path
  string vg_name = 3;             // Volume group name
  uint64 lv_size = 4;             // Size of LV
  string lv_attr = 5;             // Logical volume attributes
  string lv_layout = 6;           // Layout (e.g., "linear", "thin", "mirror")
  string pool_lv = 7;             // Thin pool name (if thin volume)
  string origin = 8;              // Origin snapshot name (if snapshot)
}

// ============================================================================
// Thin Provisioning Messages
// ============================================================================

message LVThinPoolCreateRequest {
  string vg_name = 1;                                     // Volume group name
  string pool_name = 2;                                   // Thin pool name
  string size_suffix = 3;                                 // Pool size (e.g., "100G")
  string chunk_size = 4;                                  // Chunk size (e.g., "64K", default: 64K)
  string meta_size = 5;                                   // Metadata size (optional)
  repeated string options = 6;                            // Additional options
}

message LVThinPoolCreateResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

// ============================================================================
// Snapshot Messages
// ============================================================================

message LVSnapshotCreateRequest {
  string origin_lv_path = 1;                              // Origin LV path to snapshot
  string snapshot_name = 2;                               // Snapshot LV name
  string size_suffix = 3;                                 // Snapshot size (for non-thin snapshots)
  bool thin = 4;                                          // Create as thin snapshot (uses thin pool if origin is thin)
  repeated string options = 5;                            // Additional options
}

message LVSnapshotCreateResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
  LVInfo snapshot = 4;                                    // Created snapshot info
}

message LVSnapshotRestoreRequest {
  string origin_lv_path = 1;                              // Origin LV path to restore to
  string snapshot_lv_path = 2;                            // Snapshot LV path to restore from
  bool force = 3;                                         // Force restoration (will merge)
  repeated string options = 4;                            // Additional options
}

message LVSnapshotRestoreResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message LVSnapshotMergeRequest {
  string snapshot_lv_path = 1;                            // Snapshot LV path to merge
  repeated string options = 2;                            // Additional options
}

message LVSnapshotMergeResponse {
  bool success = 1;
  string message = 2;
  int32 exit_code = 3;
}

message LVListSnapshotsRequest {
  string vg_name = 1;                                     // Volume group name (optional)
  string origin_lv_name = 2;                              // Origin LV name (optional, filter by origin)
  repeated string options = 3;                            // Additional options
}

message LVListSnapshotsResponse {
  bool success = 1;
  string message = 2;
  repeated LVInfo snapshots = 3;                          // List of snapshots
}
